--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -15,7 +15,7 @@ services:
   accountownerapp:
     depends_on:
       - db
-    image: localhost:50000/codemazeblog/accountownerapp:build-3
+    image: localhost:50000/codemazeblog/accountownerapp:build-${BUILD_NUMBER_ACCOUNTOWNER}
   integration:
     depends_on:
       - accountownerapp
